# FSMLang

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SPEC.md  cfg-v1.mk  cfg-v2.mk  depends.mk  find_on_event_data.sh  find_on_sub_machine_depth.sh  fsmlang.css  fsmrules.mk  hsmCommunicator.fsm  parser-test12.kt  parser-test5.kt  release-v2.2-alpha.14-linux.rst  simpleCommunicator.fsm  test_fsm.kt  top_level.kt
.github/: copilot-instructions.md
.github/workflows/: build.yml  c-cpp-v1.yml  c-cpp-v2.yml  c-cpp.yml  cmake_build.yml  cmake_build_windows.yml  release.yml  release_linux.yml  release_windows.yml
_codeql_build_dir/: Makefile  fsm  lexer.c  parser.c  y.tab.h
branches/Mingwsa/: fsmrules.mk
branches/change_reentrant_machine/: fsmrules.mk
branches/compact_bug/: update-lexer-tests
branches/concurrent_sub_machines/: fsmrules.mk
branches/eol_reprise/: Linux.mk
branches/event_data/: depends.mk
branches/header_file_order_enum_typedefs/: simpleCommunicator.fsm
branches/html_css/: fsmrules.mk
branches/remove_find_and_run_when_no_sub_machines/: update-parser-tests
branches/remove_unnecessary_transition_functions/: fsmrules.mk
cygwin/: Makefile  fsm_utils.d  source.mk  system.mk
docs/: c_language_og.html  maintainers.css
docs/keys/: public-385325218434AA31B003CB8F01882A2DC569879F.asc  public-FA6C65E15B7BAF5C9BB9EBFC58179FC8DDE9F761.asc
examples/: Makefile
examples/hsmCommunicator/: Makefile  canonical  hsmCommunicator.fsm  hsmc-actions.c  message-actions.c  session-actions.c
linux/: Makefile  lexer.c  lexer_v2.c  parser.c  source.mk  system.mk  y.output  y.tab.h
mingw/: Makefile  source.mk  system.mk
mingwsa/: Makefile  source.mk
releases/1.10/: updateTests
releases/1.11/: copyright  evaluateTests
releases/1.19/: fsmlang.css
releases/1.22/: VS.mk
releases/1.24/: fsmrules.mk
releases/1.30/: README.TXT
releases/1.31/: full_test.out
releases/1.32/: fsmrules.mk  hsmCommunicator.fsm
src/: Makefile  action_info_list.c  action_info_list.h  ancestry.c  ancestry.h  cwalk.c  cwalk.h  event_sequences.c  event_sequences.h  fsm_c.c  fsm_c.h  fsm_c_common.c  fsm_c_common.h  fsm_c_event_table.c  fsm_c_event_table.h  fsm_c_event_xref.c  fsm_c_event_xref.h  fsm_c_pid_xref.c  fsm_c_pid_xref.h  fsm_c_single_switch.c  fsm_c_single_switch.h  fsm_c_switch_common.c  fsm_c_switch_common.h  fsm_cswitch.c  fsm_cswitch.h  fsm_html.c  fsm_html.h  fsm_kotlin.c  fsm_kotlin.h  fsm_logger.h  fsm_plantuml.c  fsm_plantuml.h  fsm_priv.h  fsm_python_transitions.c  fsm_python_transitions.h  fsm_rst.c  fsm_rst.h  fsm_statistics.c  fsm_statistics.h  fsm_unused.h  (+20 more)
test/: Makefile  add_test_c_to_Makefile.awkscr  add_tl_THIS.sedscr  alter_RUN_macro.sedscr  alter_action_files.sedscr  change_THIS_to_UFMN.sedscr  create_target.mk  done  fix_eShared_dt.awkscr  fix_machineTransitionFn.awkscr  fix_newMachine_baz.awkscr  fix_print_machine_data.awkscr  fix_translate_e7_data_function.awkscr  stdfixes.sh  test.mk  variants.mk  weak_variants.mk
test/full_test1/: Makefile  pt2-actions.c  test.c  test.canonical
test/full_test10/: Makefile  html.canonical  pt12-actions.c  test.canonical
test/full_test100/: Makefile  s-actions.c  tec-actions.c  test.canonical  test_empty_cells.fsm
test/full_test101/: Makefile  sm1-actions.c  test.canonical  test_fsm.fsm  top_level.fsm
test/full_test102/: Makefile  test.c  test.canonical
test/full_test103/: sm1-actions.c  tl-actions.c  top_level.fsm
test/full_test104/: Makefile  Sequence_0.plantuml.canonical  Sequence_1.plantuml.canonical  Sequence_2.plantuml.canonical  Sequence_3.plantuml.canonical  Sequence_4.plantuml.canonical  Sequence_5.plantuml.canonical  Sequence_6.plantuml.canonical  eight.plantuml.canonical  test_fsm.fsm  test_fsm.plantuml.canonical
test/full_test105/: Sequence_0.plantuml.canonical  Sequence_1.plantuml.canonical  Sequence_3.plantuml.canonical  Sequence_4.plantuml.canonical  Sequence_6.plantuml.canonical  Sequence_7.plantuml.canonical  sub.plantuml.canonical  test_fsm.fsm  test_fsm_sub_Sequence_0.plantuml.canonical  test_fsm_sub_Sequence_1.plantuml.canonical  test_fsm_sub_Sequence_10.plantuml.canonical  test_fsm_sub_Sequence_2.plantuml.canonical  test_fsm_sub_Sequence_3.plantuml.canonical  test_fsm_sub_Sequence_4.plantuml.canonical  test_fsm_sub_Sequence_5.plantuml.canonical  test_fsm_sub_Sequence_6.plantuml.canonical  test_fsm_sub_Sequence_7.plantuml.canonical  test_fsm_sub_Sequence_9.plantuml.canonical  test_fsm_sub_eight.plantuml.canonical
test/full_test106/: Makefile  sub.html.canonical  test_fsm.html.canonical
test/full_test107/: Makefile  sub.html.canonical  sub.rst.canonical  test_fsm.html.canonical  test_fsm.rst.canonical
test/full_test108/: Makefile  sub.rst.canonical  test_fsm.rst.canonical
test/full_test109/: Makefile  test.canonical  test_fsm-actions.c  test_fsm.fsm
test/full_test11/: Makefile  html.canonical  pt12-actions.c  test.canonical
test/full_test110/: Makefile  sub-actions.c  test.canonical
test/full_test111/: Makefile  test.c  test_fsm.fsm
test/full_test112/: test_fsm-actions.c  test_fsm.fsm
test/full_test113/: Makefile  test_fsm-actions.c  test_fsm.fsm
test/full_test114/: Makefile  sub-actions.c  test.c  test_fsm.fsm
test/full_test115/: Makefile  sub-actions.c  sub2-actions.c  test.c  test.canonical  test_fsm.fsm
test/full_test116/: Makefile  sub-actions.c  sub2-actions.c  subSub-actions.c  test.c  test.canonical  test_fsm-actions.c  (+1 more)
trunk/: fsmrules.mk
v1/: CMakeLists.txt
v2/: CMakeLists.txt
(+1465 files in other folders)
